2015-03-23  Anders Carlsson  <andersca@apple.com>

        Make platform/mac-wk2/plugins/destroy-during-async-npp-new.html work again
        https://bugs.webkit.org/show_bug.cgi?id=133692
        rdar://problem/17255947

        Reviewed by Alexey Proskuryakov.

        * platform/mac-wk2/TestExpectations:
        Unskip test.

2015-03-23  Alexey Proskuryakov  <ap@apple.com>

        accessibility/textarea-selected-text-range.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=142976

        * platform/mac/TestExpectations: Marking as such.

2015-03-22  Benjamin Poulain  <benjamin@webkit.org>

        CSS Selectors: fix attribute case-insensitive matching of Contain and List
        https://bugs.webkit.org/show_bug.cgi?id=142932

        Reviewed by Darin Adler.

        * fast/selectors/attribute-contains-value-matching-is-ascii-case-insensitive-expected.txt: Added.
        * fast/selectors/attribute-contains-value-matching-is-ascii-case-insensitive.html: Added.
        * fast/selectors/attribute-list-value-matching-is-ascii-case-insensitive-expected.txt: Added.
        * fast/selectors/attribute-list-value-matching-is-ascii-case-insensitive.html: Added.

2015-03-22  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Update new flaky tests and remove duplicated failure test.

        Unreviewed EFL gardening.

        * platform/efl/TestExpectations:
        Remove duplicted attachment tests, and add new flaky tests regarding svg clip-path, pattern scale.

2015-03-22  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Unreviewed EFL gradening on 23th Mar.

        Skip attachment tests, unskip passing tests related with writing, webaudio.
        Add new flaky tests.

        * platform/efl/TestExpectations:

2015-03-21  Dean Jackson  <dino@apple.com>

        Remove the prefix for CSS Transforms
        https://bugs.webkit.org/show_bug.cgi?id=142927
        <rdar://problem/11568151>

        Reviewed by Simon Fraser.
